api-app.yaml
# api-app service
apiVersion: v1
kind: Service
metadata:
  name: api-app
  namespace: node-app
  labels:
    service: api-app
    project: node-app
spec:
  type: NodePort
  selector:
    service: api-app
    project: node-app
  ports:
    - port: 8080
      targetPort: 8080

---
# api-app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  namespace: node-app
  labels:
    service: api-app
    project: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      service: api-app
      project: node-app
  template:
    metadata:
      labels:
        service: api-app
        project: node-app
    spec:
      containers:
        - name: api-app
          image: angwangsu/api-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
