web-app.yaml
# web-app service
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: node-app
  labels:
    service: web-app
    project: node-app
spec:
  type: NodePort
  selector:
    service: web-app
    project: node-app
  ports:
    - port: 80
      targetPort: 80

---
# web-app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: node-app
  labels:
    service: web-app
    project: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      service: web-app
      project: node-app
  template:
    metadata:
      labels:
        service: web-app
        project: node-app
    spec:
      containers:
        - name: web-app
          image: angwangsu/web-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
