ingress-single.yaml
# Ingress API 버전: networking.k8s.io/v1
# Ingress 이름: node-app
# Ingress 네임스페이스: node-app
# Ingress 레이블: project=node-app
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app
  namespace: node-app
  labels:
    project: node-app
## HttpIngressRule: /api로 시작하는 모든 요청을 허용
## Path /를 위한 backend 서비스 이름: api-app
## Path /를 위한 backend 서비스 포트: 8080
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-app
                port:
                  number: 80
          ## HttpIngressRule: /web로 시작하는 모든 요청을 허용
          ## Path /를 위한 backend 서비스 이름: web-app
          ## Path /를 위한 backend 서비스 포트: 80
          - pathType: Prefix
            path: /web
            backend:
              service:
                name: web-app
                port:
                  number: 80
